# ya-py-aioclient

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  generate.yml
build-scripts/: add_event_date_field.sh  apply-patches.sh  diff-module.sh  gen-all.sh  gen-pyi.py  setup-target.sh
golem_node_api_client/: __init__.py  client.py  errors.py  types.py
golem_node_api_client/models/: __init__.py  acceptance.py  account.py  activity_payment.py  activity_state.py  activity_state_state_item.py  activity_usage.py  address.py  agreement.py  agreement_cancelled_event.py  agreement_event.py  agreement_list_entry.py  agreement_operation_event.py  agreement_payment.py  agreement_proposal.py  agreement_rejected_event.py  agreement_state.py  agreement_terminated_event.py  agreement_terminated_event_terminator.py  allocation.py  allocation_update.py  capture.py  capture_at_end_body.py  capture_format.py  capture_mode.py  capture_part.py  capture_stream_body.py  command_output.py  command_output_bin.py  command_output_str.py  connection.py  create_activity.py  create_activity_request.py  create_activity_result.py  credentials.py  debit_note.py  debit_note_accepted_event.py  debit_note_cancelled_event.py  debit_note_event.py  debit_note_failed_event.py  (+73 more)
patches/: 0001_remove_py2.patch  0002_long_ref.patch  0003_url_encode_py3.patch
patches/activity/: 001_drop_python2.patch  005_log_request.patch  006_oneof.patch  007_drop_six.patch  007_import_six.patch  008_event_api.patch  009_six.patch  009_state_items_nullable.patch  010_net.patch
patches/market/: 002_drop_python2.patch  003_test_fix.patch  004_drop_six.patch  005_log_request.patch  006_activity_event_api.patch  006_event_api.patch
patches/net/: 001_drop_python2.patch
patches/payment/: 001_drop_python2.patch  005_log_request.patch  006_drop_six.patch  006_import_six.patch  008_six.patch  (+5 more)
scripts/: common.py  prepare-spec-bundle.py  run-code-gen.py
templates/: endpoint_module.py.jinja  model.py.jinja  models_init.py.jinja  package_init.py.jinja  spec-root.json  types.py.jinja  utils.jinja
(+112 files in other folders)
