[tool.poetry]
name = "golem-node-api-python"
version = "0.1.0"
description = "Golem Network (https://golem.network/) Node API for Python"
authors = ["Golem Factory <contact@golem.network>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
